8285517: System.getenv() returns unexpected value if environment variable has non ASCII character